--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "next": "10.0.9",
-    "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
