--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^4.6.0",
     "next": "10.0.9",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "sass": "^1.32.8"
   },
