--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8"
+    "react-hook-form": "^7.1.1",
+    "sass": "^1.32.8",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
