--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.1.1",
+    "react-timeago": "^5.2.0",
     "sass": "^1.32.8",
     "swr": "^0.5.5"
   },
