--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,8 +8,8 @@
     ],
     "allowJs": false,
     "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": false,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
