--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
+    "@types/react-timeago": "^4.1.2",
     "typescript": "^4.2.3"
   }
 }
