--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^7.1.1",
     "react-timeago": "^5.2.0",
+    "recoil": "^0.3.1",
     "sass": "^1.32.8",
     "swr": "^0.5.5"
   },
