--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
+    "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-timeago": "^4.1.2",
     "typescript": "^4.2.3"
   }
