--- a/app/package.json
+++ b/app/package.json
@@ -22,10 +22,14 @@
     "swr": "^0.5.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-timeago": "^4.1.2",
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
     "typescript": "^4.2.3"
   }
 }
