--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-timeago": "^4.1.2",
     "babel-jest": "^27.0.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "typescript": "^4.2.3"
   }
