--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.6.0",
+    "msw": "^0.34.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
