--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,7 @@
     "react-timeago": "^5.2.0",
     "recoil": "^0.3.1",
     "sass": "^1.32.8",
-    "swr": "^0.5.5"
+    "swr": "1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
