--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.6.0",
-    "material-ui": "^0.20.2",
     "msw": "^0.34.0",
     "next": "10.0.9",
     "react": "17.0.1",
