--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@next/bundle-analyzer": "^12.0.7",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.6.0",
     "msw": "^0.34.0",
