package: core-js@3をdev dependenciesに追加

--- a/app/.babelrc
+++ b/app/.babelrc
@@ -5,7 +5,8 @@
       {
         "preset-env": {
           "useBuiltIns": "entry",
-          "targets": "Chrome >= 60, Safari >= 10.1, iOS >= 10.3, Firefox >= 54, Edge >= 15"
+          "targets": "defaults",
+          "corejs": 3
         }
       }
     ]
