--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@next/bundle-analyzer": "^12.0.7",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.6.0",
     "msw": "^0.34.0",
@@ -27,6 +26,7 @@
     "swr": "1.0.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.0.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/node": "^14.14.35",
@@ -34,6 +34,7 @@
     "@types/react-infinite-scroller": "^1.2.2",
     "@types/react-timeago": "^4.1.2",
     "babel-jest": "^27.0.6",
+    "core-js": "3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "typescript": "^4.2.3"
