--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,10 @@
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.6.0",
     "msw": "^0.34.0",
-    "next": "10.0.9",
-    "react": "17.0.1",
+    "next": "12",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.1.1",
     "react-infinite-scroller": "^1.2.4",
     "react-timeago": "^5.2.0",
